adding storybook for card.component.ts

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@ Thumbs.db
 
 # VS Code settings
 .vscode/
+
+# Chromatic and Storybook
+build-storybook.log
+chromatic.log
+chromatic-build-*.xml
+chromatic-diagnostics.json
+*storybook.log
