--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "chromatic": "chromatic",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
+    "@storybook/addon-essentials": "^8.6.7",
     "@storybook/blocks": "^8.6.7",
     "@storybook/experimental-addon-test": "^8.6.7",
     "@storybook/test": "^8.6.7",
